# paste3

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: build.yml  docs.yml  test_pinned_deps.yml  test_unpinned_deps.yml  tests.yml
docs/paste3/: installation.md
docs/source/: api.rst  conf.py  index.rst  tutorial.rst
docs/source/api/: paste.PASTE.center_align.rst  paste.PASTE.pairwise_align.rst  paste.helper.apply_trsf.rst  paste.helper.filter_for_common_genes.rst  paste.helper.match_spots_using_spatial_heuristic.rst  paste.visualization.plot_slice.rst  paste.visualization.stack_slices_center.rst  paste.visualization.stack_slices_pairwise.rst
docs/source/notebooks/: getting-started.ipynb  paste_tutorial.ipynb
src/paste/: PASTE.py  __init__.py  helper.py  paste-cmd-line.py  paste_cmd_line.py
src/paste2/: helper.py  model_selection.py  tutorial.py
src/paste3/: glmpca.py  helper.py  model_selection.py  paste.py  paste2.py  paste_cmd_line.py  tutorial.py  visualization.py
tests/: conftest.py  test_glmpca.py  test_model_selection.py  test_paste.py  test_paste2.py  test_paste_cmd_line.py  test_paste_helpers.py  test_visualization.py
tests/data/input/: H_intermediate.csv  W_intermediate.csv  Y.csv  cell_factors.csv  cell_specific_covariates.csv  center_ot1_pairwise.csv  center_ot2_pairwise.csv  center_ot3_pairwise.csv  center_ot4_pairwise.csv  center_slice1_pairwise.csv  center_slice2_pairwise.csv  center_slice3_pairwise.csv  center_slice4_pairwise.csv  coeffX.csv  deltaG.csv  gene_distance.csv  glmpca_distance_matrix.csv  joint_matrix.csv  loadings_onto_genes.csv  slices_1_2_pairwise.csv  slices_2_3_pairwise.csv  slices_3_4_pairwise.csv
tests/data/output/: H_center  H_center.csv  H_center_NMF.csv  W_center  W_center.csv  W_center_NMF.csv  align_given_cost_matrix_pairwise_info.csv  aligned_slice.csv  aligned_spatial_2_3.csv  aligned_spatial_3_4.csv  aligned_spatial_4_5.csv  aligned_spatial_center.csv  center_ot1_pairwise.csv  (+37 more)
