[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "paste"
authors = [
    {name="Max Land", email="max.ruikang.land@gmail.com"}
]
description = "A computational method to align and integrate spatial transcriptomics experiments."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

dependencies = [
    "anndata>=0.7.6",
    "scanpy>=1.7.2",
    "POT==0.9.0",
    "numpy",
    "scipy",
    "scikit-learn>=0.24.0",
    "IPython>=7.18.1",
]
dynamic = ["version"]

[project.scripts]
paste = "paste.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-sv"

[project.optional-dependencies]
dev = [
    "build",
    "pytest",
]